--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -96,6 +96,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightStick_Left)
 +ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=Gamepad_LeftY)
